# fastapi-template

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  lefthook.yml  pyproject.toml
.gitlab/merge_request_templates/: Merge Request.md
alembic/: env.py
alembic/versions/: 0001_initial_.py
app/: database.py  deps.py  main.py
app/celery_app/: README.md  celery_app.py  celery_deps.py  celery_executor.py  constants.py  tasks.py
app/core/: http_client.py
app/core/base/: base_deps.py  base_entities.py  base_factories.py  base_repositories.py
app/core/example/: api.py  deps.py  models.py  repositories.py  services.py
app/core/example/schemas/: dto.py  dto_factories.py  model_factories.py
app/core/system/: api.py
app/utils/: log_handler.py  utils.py  xjson.py
settings/: .env.local  .env.template  .env.test  config.py
tests/: conftest.py
tests/tests_example/: conftest.py  test_example_repositories.py  test_example_tasks.py
tests/tests_system/: test_system_routes.py  test_xjson.py
